<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingHorizontal="24dp">

    <!-- Onboarding2 Image -->
    <ImageView
        android:id="@+id/imageOnboarding"
        android:layout_width="320dp"
        android:layout_height="480dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/onboarding2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/titleOnboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/explainOnboardingText"
        android:textColor="#13231B"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imageOnboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Description -->
    <TextView
        android:id="@+id/descOnboarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textOnboarding"
        android:textColor="#597165"
        android:textSize="14sp"
        android:lineSpacingExtra="2dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/titleOnboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>